L<bric_soap> and L<bric_republish>. Sponsored by Denison University. [David]

=item *

Added a C<$priority> argument to the C<publish> method of
L<Bric::Util::Burner> and modifed L<Bric::Util::Job::Pub> to pass its
priority. This is so that the priority of the publish job will be replicated
as the priority of the distribution job created by the publish. [David]

=back

=head1 Version 2.0.1 ()

=head1 Improvements

=over

=item *

Added C<SKIP_SSL_REDIRECT> F<bricolage.conf> directive. This directive
prevents Bricolage from redirecting to and from an SSL URL when C<SSL_ENABLE>
is turned on. The case for this is when Bricolage is running behind a reverse
proxy server that's handling SSL mappsings. Thanks to Alex Krohn for the
report. [David]

=item *

Added the "object" format for datetime values. Pass "object" as the formatting
string and a L<DateTime> object will be returned, rather than a string.
[David]

=item *

Refactored the SFTP mover to do proper error handling. Also removed the code
that "escapes" file names, as with more recent versions of Net::SSH2 it left
the backslashes in the file names. [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a bug in the L<Bric::Util::ApacheReq> tests where they would fail if the
C<LISTEN_PORT> or C<SSL_PORT> F<bricolage.conf> directives were anything other
than 80 and 443, respectively. Thanks to Héctor Daniel Cortés González for the
report. [David]

=item *

The "Checkout" link no longer appears on desk items for users who do not have
permission to edit an asset [Kahil Jallad].

=item *

Fixed a bug where the SFTP mover would not properly finish moving the file,
leaving escaped tmp files on the destination server. [Matt Rolf]

=item *

Updating published stories or media or deployed templates via the SOAP
interface with the C<EXPIRE_ON_DEACTIVATE> F<bricolage.conf> directive enabled
no longer expires those assets unless they are active and the