@@ -103,7 +103,7 @@ sub test_lookup : Test(8) {
 
 ##############################################################################
 # Test the list() method.
-sub test_list : Test(48) {
+sub test_list : Test(50) {
     my $self = shift;
 
     # Create a new job group.
@@ -229,6 +229,11 @@ sub test_list : Test(48) {
     ok( @jobs = Bric::Util::Job::Dist->list({ resource_id => $rid }),
         "Look up resource_id '$rid'" );
     is( scalar @jobs, 2, "Check for 2 jobs" );
+
+    # Try Limit.
+    ok( @jobs = Bric::Util::Job::Dist->list({ Limit => 3 }),
+        "Look up 3 jobs" );
+    is( scalar @jobs, 3, "Check for 3 jobs" );
 }
 
 ##############################################################################
